Fix bug on mobile iOS: revert changes

--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ form {
 }
 
 .button {
-  background-color: hsl(235, 40%, 75%);
+  background-color: hsl(35, 40%, 75%);
   color: var(--yt-clr);
   font-size: 1.2rem;
   padding: 10px;
